# gofile-cli

./: .gitignore  README.md  gofilecli.py  pyproject.toml  tests.py
